--- a/First_site.html
+++ b/First_site.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
      <meta charset="utf 8">
      <title></title>
@@ -10,11 +10,11 @@
 <header>
      <div></div>
      <nav>
-       <a></a>
-       <a></a>
-       <a></a>
-       <a></a>
-       <a></a>
+       <a>href=</a>
+       <a>href=</a>
+       <a>href=</a>
+       <a>href=</a>
+       <a>href=</a>
      </nav>
  </header>
  <section>
@@ -24,7 +24,7 @@
     <button></button>
  </main>
     <div>
-      <img>
+      <img src=alt=/>
  </div>
 </section>
 </body>
