--- a/First_site.html
+++ b/First_site.html
@@ -6,15 +6,14 @@
 </head>
 <body>
      <p></p>
-</body>
 <header>
      <div></div>
      <nav>
-       <a>href=</a>
-       <a>href=</a>
-       <a>href=</a>
-       <a>href=</a>
-       <a>href=</a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
      </nav>
  </header>
  <section>
@@ -24,8 +23,8 @@
     <button></button>
  </main>
     <div>
-      <img src=alt=/>
- </div>
+      <img src"alt="/>
+    </div>
 </section>
 </body>
 </html>
