--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
      <meta charset="utf 8">
-     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="style.css">
      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
      <title></title>
 </head>
