--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
      <meta charset="utf 8">
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="font.css">
      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
      <title></title>
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
-         <div class="logo">app.creation</div>
+         <div class="logo">
+           <div class="logo__circle logo__circle_color_dark-blue"></div>
+           <div class="logo__circle logo__circle_color_blue"></div>
+            app.creation
+  </div>
          <nav class="menu">
             <a class="menu__item" href="#">start</a>
             <a class="menu__item" href="#">services</a>
